# cloud-usage

./: .gitignore  LICENSE  README.md  ecr_repositories.txt  lambda_function.py  pyproject.toml
idea/: slack_message_design.md
monitor/: Dockerfile  aws_ec2_report_to_slack.py  aws_list_to_archive_from_s3_bucket.py  aws_list_to_move_to_archive_from_s3.py  aws_move_to_glacier_s3_bucket.py  aws_old_s3_bucket_list.py  aws_s3_bucket_list.py  aws_s3_bucket_list_by_size_and_date.py  aws_snapshot_management.py  aws_usage_report_to_slack.py  azure_usage_report_to_slack.py  gcp_usage_report_to_slack.py  usage_report_to_slack.py
monitor/ec2_management/: README.md  aws_delete_snapshot.py  aws_ec2_report_to_slack.py  aws_report_snapshot.py  aws_snapshot_cleaning.py
monitor/ecr_management/: AWS사용법.md  aws_ecr_lambda_report_to_slack.py  aws_ecr_report_to_slack.py  get_ecr_object.py  get_lambda_object.py  readme.md  slack_utils.py  tmp.md  tmp.py  uri.txt
monitor/gcp_usage_report_to_slack/: main.py  requirement.txt  requirements.txt  slackposting.py
monitor/s3_management/: README.md  aws_auto_s3_archiving.py  aws_s3_archiving_report.py  aws_s3_standard_report.py  usage_created_archiving_instance.py  usage_terminated_archiving_instance.py
monitor/spot_management/: README.md  aws_daily_instance_usage_report.py  aws_search_instance_information.py  (+4 more)
monitor_v2/: __init__.py  lambda_handler.py  test_cost.py  test_cost_cur_to_slack.py  test_cost_to_slack.py  test_ec2.py  test_ec2_cur_to_slack.py  test_ec2_to_slack.py  test_main3.py
usage-EC2-report/: lambda_function.py
(+37 files in other folders)
